all in one page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.sql.init.mode=always
 
 #logging.level.org.springframework.security=DEBUG
+
+
+#spring.mvc.static-path-pattern = /static/**
+#spring.web.resources.static-locations = classpath:/static
